--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,6 +1,6 @@
  <div class="footer" style="clear: both;float:none;background: inherit;">
     <hr>
- 	  <p class="text-muted">&copy KBH KAUN BANEGA HAJAROPATI 2016 -</p>
+ 	  <p class="text-muted">&copy KBE KAUN BANEGA ENTREPRENEUR</p>
  </div>
   </body>
 </html>
