--- a/includes/header.html
+++ b/includes/header.html
@@ -13,6 +13,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/jquery-ui.css" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="shortcut icon" href="images\iconkbh.png">
     <!-- Custom styles for this template -->
     <link href="css/theme.css" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
