--- a/css/theme.css
+++ b/css/theme.css
@@ -118,7 +118,7 @@ table {
   word-break:normal;}
 
 .pricetag{
-  background-image:url('../images/oy.png');
+  background-image:url('../images/ow.png');
   background-size:100% 100%;
 }
 
