--- a/includes/header.html
+++ b/includes/header.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Kaun Banega Entrepreneur">
     <meta name="author" content="Rtr. Abhishek Jain">
-    <title>KBE</title>
+    <title>KBC</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
