--- a/includes/header.html
+++ b/includes/header.html
@@ -33,13 +33,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Kaun Banega Crorepati</a>
+          <a class="navbar-brand" href="#">Kaun Banega Entrepreneur</a>
         </div>
        <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.php">Home</a></li>
             <li><a href="add_quiz.php">Add Quiz</a></li>
-            <li><a href="next_que.php">next question</a></li>
+            <li><a href="next_que.php">Next Question</a></li>
           </ul>
         </div>
       </div>
